<resources>
    <string name="app_name">Xcaret Loyalty Reps</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="prompt_email">RCX / RRX</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_data">Tus datos son incorrectos, por favor verificalos.</string>
    <string name="error_invalid_name">Debes ingresar RCX / RRX válido</string>
    <string name="error_invalid_email">Debes ingresar un correo válido</string>
    <string name="error_invalid_profile_email">Debes ingresar un correo válido</string>
    <string name="error_invalid_profile_phone">Ingresa un número telefónico de 10 dígitos</string>
    <string name="error_invalid_password">Debes ingresar RCX válido</string>
    <string name="error_incorrect_password">Debes ingresar contraseña</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Entrar</string>
    <string name="login_notice">*Si aún no tienes tu número de acceso u olvidaste tu contraseña, contacta a tu Ejecutivo
        o llámanos al\n(998) 980 0390.
    </string>
    <string name="meet_lore_title">¡Hola!</string>
    <string name="meet_lore_desc">Mi nombre es
        <font fgcolor='#832181'>
            <b>LORE</b>
        </font>
        , y te ayudaré a que\naproveches al máximo tu plataforma.
    </string>
    <string name="home_level">nivel</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_parks">Parques</string>
    <string name="menu_shop">Tienda</string>
    <string name="menu_courtesies">Cortesías</string>
    <string name="menu_profile">Perfil</string>
    <string name="home_fragment_title">Responde el quiz para empezar\na ganar puntos.</string>
    <string name="home_fragment_title2">Completa tu perfil y responde el quiz\npara empezar a ganar y canjear puntos.
    </string>
    <string name="home_frag_status">Estatus:</string>
    <string name="home_frag_statusopt">Inactivo</string>
    <string name="home_frag_0">0</string>
    <string name="home_frag_points">puntos para canje</string>
    <string name="home_frag_profile">Perfil</string>
    <string name="home_frag_quiz">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goto_training">Training</string>
    <string name="goto_newsfeed">Newsfeed</string>
    <string name="goto_sails">Ventas</string>
    <string name="goto_support">Soporte</string>
    <string name="pickup_zona">Zona</string>
    <string name="pickup_select_tour">Selecciona un tour</string>
    <string name="pickup_tour">Tour</string>
    <string name="pickup_date">Fecha</string>
    <string name="date">Selecciona una fecha</string>
    <string name="pickup_schedule">Horarios de transporte</string>
    <string name="pickup_search">Buscar</string>
    <string name="pickup_hour">Horario</string>
    <string name="product_name">Cafetera Nespresso Krups</string>
    <string name="product_price">50,000 pts</string>
    <string name="store_items">Artículos</string>
    <string name="store_curses">Cursos</string>
    <string name="store_hotsale">¡Hot sale!</string>
    <string name="store_mypoints">Mis puntos:</string>
    <string name="store_categorytext">Categoría</string>
    <string name="shop_canjear">Canjear</string>
    <string name="canjear_alert_title">¿Estás seguro que quieres continuar con el canje?</string>
    <string name="shop_cancelar_canje">Cancelar</string>
    <string name="goto_shop">Tienda</string>
    <string name="videos_disponibles">Los videos estarán disponibles hasta el día 00/00/00. Responde el quiz para ganar
        puntos.
    </string>
    <string name="quiz">QUIZ</string>
    <string name="quiz_instruction">Puedes seleccionar varias respuestas</string>
    <string name="playme">Play video</string>
    <string name="quiz_next">SIGUIENTE</string>
    <string name="share_using">Compartir usando</string>
    <string name="emptyList">No se encontraron resultados</string>
    <string name="search_news">Buscar noticia</string>
    <string name="success_response1">Tu saldo actual de puntos para artículos es de:</string>
    <string name="success_response1_boletosrifa">Tu saldo actual de puntos para boletos de rifa es de:</string>
    <string name="success_response2">Contáctame vía chat para agendar la entrega.</string>
    <string name="call_support">Iniciar chat</string>
    <string name="success_response3">Por favor inténtalo de nuevo. Si el problema persiste, escríbenos en la sección de
        soporte.
    </string>
    <string name="search_hotel">Buscar hotel</string>
    <string name="ask_availavility">*Reserva con 24 hrs de anticipación.</string>
    <string name="make_reservation">ENVIAR</string>
    <string name="make_reservation_text">RESERVAR</string>
    <string name="make_phone_call">CONSULTAR DISPONIBILIDAD</string>
    <string name="reservation_titular">Titular de la reservación</string>
    <string name="insert_name">Ingresa tu nombre</string>
    <string name="reservation_adult_txt">Adulto(s)</string>
    <string name="reservation_kids_txt">Niño(s)</string>
    <string name="reservation_infants_txt">Infante(s)</string>
    <string name="insert_park">Parque</string>
    <string name="reservation_date">Fecha</string>
    <string name="insert_date">Elige fecha</string>
    <string name="reservation_agency">Agencia</string>
    <string name="insert_agency">Ingresa agencia</string>
    <string name="reservation_rcx">RRX/RCX</string>
    <string name="sales_bymonth">EN ESTE MES</string>
    <string name="sales_byear">EN ESTE AÑO</string>
    <string name="month">Month Year</string>
    <string name="total_pax">Total pax:</string>
    <string name="days_left">¡Te quedan
        <b>
            <font fgcolor='#832181'>86 días</font>
        </b>
        para convertirte en
        <b>
            <font fgcolor='#832181'>Top Rep</font>
        </b>
        !
    </string>
    <string name="accumulate_points">Debes acumular un total de
        <b>
            <font fgcolor='#832181'>18,000 pts</font>
        </b>
        antes del
        <b>
            <font fgcolor='#832181'>30-06-2019</font>
        </b>
        .
    </string>
    <string name="total_points">18,000</string>
    <string name="num">100 pts</string>
    <string name="go_back">Atrás</string>
    <string name="section_pickup">Pick-ups</string>
    <string name="section_training">Training</string>
    <string name="section_complimentaries">Cortesías</string>
    <string name="section_newsfeed">Newsfeed</string>
    <string name="section_parks">Parques</string>
    <string name="store_productpoints">Puntos artículos:</string>
    <string name="store_rifapoints">Puntos rifa:</string>
    <string name="section_profile">Perfil</string>
    <string name="section_profile_myaccount">Mi cuenta</string>
    <string name="section_profile_interests">Intereses</string>
    <string name="section_profile_record">Historial</string>
    <string name="profile_status">Estatus de la cuenta:</string>
    <string name="registration_prompt_name">Nombre</string>
    <string name="add_more">Más</string>
    <string name="add_less">Menos</string>
    <string name="product_qty">2</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="notification">Notificación</string>
    <string name="skip">Saltar</string>
    <string name="start_tutorial">Empezar</string>
    <string name="welcom_skip_notice">*Si eliges la opción SALTAR,\npodrás ver el tutorial en la sección de Soporte.
    </string>
    <string name="main_quiz_instructions">Deberás aprobar con un mínimo de 80% para activar tu cuenta y acceder a tus
        cortesías. Si quieres prepararte para el quiz, revisa nuestra sección de Training.
    </string>
    <string name="mainquiz_welcome_title">¡Bienvenido al quiz!</string>
    <string name="start_main_quiz">COMENZAR</string>
    <string name="quiz_previous">ANTERIOR</string>
    <string name="quiz_finish">FINALIZAR</string>
    <string name="choice">I\'m a choice</string>
    <string name="choice_pickone">¡Debes seleccionar una opción!</string>
    <string name="quiz_result_title_error">Inténtalo de nuevo</string>
    <string name="quiz_result_training_error_description">Una o más respuestas no fueron correctas</string>
    <string name="quiz_result_training_error_next_steps">Puedes volver a ver el video y regresar a contestar el quiz de
        nuevo.
    </string>
    <string name="quiz_result_title_passed">¡Felicidades!</string>
    <string name="quiz_result_description_error">Necesitas un mínimo de 80% de respuestas correctas para activar tu
        cuenta.
    </string>
    <string name="quiz_result_error_next_instructions">Visita la sección de “Training” para prepararte y regresa a
        contestar el quiz de nuevo.
    </string>
    <string name="quiz_result_passed_next_instructions">¡Ya puedes comenzar a usar tus puntos! Recuerda que los puedes
        canjear por productos de tienda, cursos y rifa.
    </string>
    <string name="quiz_result_passed_descriptions">Aprobaste el quiz ganando \nun total de:</string>
    <string name="quiz_result_error_quiz">QUIZ</string>
    <string name="quiz_result_error_training">TRAINING</string>
    <string name="quiz_result_passed_mainview">INICIAR</string>
    <string name="quiz_result_passed_store">TIENDA</string>
    <string-array name="tours">
        <item>Xcaret</item>
        <item>Xplor</item>
        <item>Xenses</item>
    </string-array>
    <string name="Smooch_startOfConversation">¡Hola! En este chat podrás conversar con un ejecutivo de Grupo Xcaret.
    </string>
    <string name="Smooch_welcome">Si tienes alguna pregunta sobre Lore App, el Programa de Loyalty Reps o sobre los
        servicios de los Parques y Tours de Xcaret, escríbenos, estamos disponibles para ti de 7 am a 7 pm.
    </string>
    <string name="prompt_profile_hint_name">Nombre</string>
    <string name="prompt_profile_name">rcx0000543</string>
    <string name="prompt_profile_hint_rcx">RCX / RRX</string>
    <string name="prompt_profile_hint_last_name">Apellido paterno</string>
    <string name="prompt_profile_hint_last_name2">Apellido materno</string>
    <string name="prompt_profile_hint_email">Correo</string>
    <string name="prompt_profile_hint_phone">Teléfono</string>
    <string name="prompt_profile_hint_photo">Foto</string>
    <string name="prompt_profile_hint_id">Identificación oficial (INE, licencia, pasaporte)</string>
    <string name="close_app">Close me</string>
    <string name="profile_popup1_title">Especificaciones para la\nfotografía de tu tarjeta digital</string>
    <string name="profile_popup1_description">
        1. Archivo JPG, PNG.\n(2MB Máx.)\n2. Fotografía tipo credencial:\n
        - De frente\n
        - Fondo blanco\n
        - Con uniforme
    </string>
    <string name="goto_main">INICIO</string>
    <string name="goto_main_quiz">QUIZ</string>
    <string name="you_are_ready_message">Si más adelante tienes dudas, ve a la sección\n
        de
        <b>
            <font fgcolor='#832181'>"Soporte"</font>
        </b>
        para seguir ayudándote.
    </string>
    <string name="you_are_ready_title">¡Ya estás listo!</string>
    <string name="support">SOPORTE</string>
    <string name="sales_rep_description">Por cada pax vendido en modalidad Tour se te otorga un total de 15 puntos (niño o adulto) y por cada pax vendido en Paquete 30 puntos  (niño o adulto). Si logras acumular 18,000 puntos durante el periodo enero-junio o julio-diciembre, podrás cambiar tu nivel a Top Rep el semestre siguiente y con ello gozar de más cortesías.</string>
    <string name="sales_rep_title">Cada venta cuenta</string>
</resources>