<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.fragments.store.ShopResponseFragment">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                                           android:padding="@dimen/general_padding" android:background="@color/colorPrimaryLight">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

            <TextView
                    android:id="@+id/canjeTitle"
                    style="@style/ActivityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textColor="@color/activity_title"
                    tools:text="@string/meet_lore_title" android:textSize="@dimen/text26"
                    android:fontFamily="@font/roboto"/>

            <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lorePic"
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_below="@id/canjeTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin30"
                    android:layout_marginBottom="@dimen/margin30"
                    android:scaleType="centerInside"
                    tools:src="@drawable/lore_quiz"
                    app:lottie_rawRes="@raw/lore_enojada"
                    app:lottie_loop="true"
                    app:lottie_speed="1"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical" android:id="@+id/successContainerDesc" android:layout_below="@id/lorePic">

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/success_response1"
                          tools:text="@string/success_response1" android:textAlignment="center"
                          style="@style/GeneralTextGrey"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:textAlignment="center"
                          tools:text="@string/total_points" android:id="@+id/responseTotalPoints"
                          android:textSize="@dimen/text26"
                          android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
                          android:fontFamily="@font/roboto"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/success_response2"
                          android:text="@string/success_response2" android:textAlignment="center"
                          style="@style/GeneralTextGrey"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/success_response3"
                          android:text="@string/success_response3" android:textAlignment="center"
                          style="@style/GeneralTextGrey"/>

            </LinearLayout>

            <Button
                    android:id="@+id/goToShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@id/successContainerDesc"
                    android:text="@string/goto_shop" android:layout_marginTop="30dp"
                    style="@style/GreenButtonStyle"/>

            <Button
                    android:id="@+id/getHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/goToShop"
                    android:text="@string/support"
                    android:layout_marginTop="30dp"
                    style="@style/TransparentButton"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>