<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin30" android:id="@+id/responseMainContainer"
        android:background="@color/colorPrimaryLight">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:gravity="center_vertical" android:id="@+id/responseContainer">

        <TextView
                android:id="@+id/canjeTitle"
                style="@style/ActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColor="@color/activity_title"
                android:text="@string/meet_lore_title" android:textSize="@dimen/text26"/>

        <ImageView
                android:id="@+id/lorePic"
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="200dp" android:layout_below="@id/canjeTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin30"
                android:layout_marginBottom="@dimen/margin30"
                android:scaleType="centerInside"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/successContainerDesc" android:layout_below="@id/lorePic">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/success_response1"
                      android:text="@string/success_response1" android:textAlignment="center" android:textSize="@dimen/general_text"
                      android:textColor="@color/textDark"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textAlignment="center"
                      android:text="@string/home_frag_points" android:id="@+id/responseTotalPoints" android:textSize="@dimen/text26"
                      android:textColor="@color/activity_title"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/success_response2"
                      android:text="@string/success_response2" android:textAlignment="center" android:textSize="@dimen/general_text"
                      android:textColor="@color/textDark"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/success_response3"
                      android:text="@string/success_response3" android:textAlignment="center" android:textSize="@dimen/general_text"
                      android:textColor="@color/textDark"/>

        </LinearLayout>

        <Button
                android:id="@+id/gotoStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_below="@id/successContainerDesc"
                android:background="@drawable/button_green"
                android:paddingStart="@dimen/margin50"
                android:paddingEnd="@dimen/margin50" android:textAllCaps="true"
                android:textColor="@color/colorWhite" android:layout_centerHorizontal="true"
                android:text="@string/goto_shop" android:layout_marginTop="30dp"/>

        <Button
                android:id="@+id/getHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_below="@id/gotoStore"
                android:background="@drawable/button_green_border"
                android:paddingStart="@dimen/margin50"
                android:paddingEnd="@dimen/margin50" android:textAllCaps="true"
                android:textColor="@color/colorAccent" android:layout_centerHorizontal="true"
                android:text="@string/call_support" android:layout_marginTop="30dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1000dp"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>